[package]
name = "gungeon-save"
description = "A simple Enter the Gungeon save file decoder and encoder."
documentation = "https://docs.rs/gungeon-save"
homepage = "https://github.com/Elinvynia/gungeon-save"
repository = "https://github.com/Elinvynia/gungeon-save.git"
keywords = ["gungeon", "save file", "enter the gungeon"]
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.0.1"
edition = "2018"

[target.'cfg(windows)'.dependencies]
app_dirs = "1.2.1"
